# walkmate

./: .bumpversion.cfg  .coverage  .cspell.json  .cspell.txt  .eslintrc.json  .gitignore  .prettier.yml  .prettierrc.yml  .pylintrc  .quickdocs.yml  .template.yml  .travis.yml  Gruntfile.js  LICENSE.md  README.md  coverage.json  main.py  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: docs.yml  publish.yml  pull_request.yml  review.yml
.husky/: pre-commit
ci/: db.env  docker-compose.yml  master.cfg  master.env  worker.env
docs/: conf.py  index.rst  requirements.txt
docs/sphinx/: conf.py
scripts/: bdd.bash  clean.bash  jobs.yml  template.yml
src/: __init__.py  files.py  tree.py
test/: test_files.py  test_tree.py
tests/unit_tests/: test_get_child_files.py
walker/: __init__.py
walkmate/: __init__.py  files.py  main.py
