[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "walkmate"
version = "1.4.0"
description = "Traverse the file tree."

dependencies = []
requires-python = ">=3.6"

license = { file = "LICENSE.md" }
readme = "README.md"

authors = [{ name = "Joel Lefkowitz", email = "joellefkowitz@hotmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

keywords = ["filesystem", "traverse", "tree", "walk"]

[project.urls]
Homepage = "https://github.com/JoelLefkowitz/walkmate"

[tool.hatch.build.targets.sdist]
include = ["src/*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "walkmate"
