[metadata]
name = walkmate
version = 1.2.2

description = Recursively walk and find files.
url = https://github.com/JoelLefkowitz/walkmate

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

project_urls =
   Bug Tracker   = https://github.com/JoelLefkowitz/walkmate/issues
   CI            = https://travis-ci.com/github/JoelLefkowitz/walkmate
   Documentation = https://walkmate.readthedocs.io/en/latest/
   Source Code   = https://github.com/JoelLefkowitz/walkmate

classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[portfolio]
project_type = Pypi package
status = Production/Stable
homepage = https://github.com/JoelLefkowitz/walkmate

languages =
    Python

paradigms =
    Object oriented programming

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
